// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SIcon.vue can be gold 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-gold">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be green 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-green">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be grey 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-grey">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be ice 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-ice">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be large 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--size-large">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be magenta 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-magenta">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be night 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-night">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be red 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-red">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be regular 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--size-regular">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be small 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--size-small">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be spartan_blue 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-spartan_blue">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be turquoise 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-turquoise">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue can be white 1`] = `
<svg viewBox="0 0 24 24" class="icon icon--color-white">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;

exports[`SIcon.vue renders correctly 1`] = `
<svg viewBox="0 0 24 24" class="icon">
  <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
</svg>
`;
